# LMS

./: .gitignore  CHANGELOG.md.save0  README.md  library-management-system.cabal  library.txt  stack.yaml
Library-Cesc/: BookDB.txt  MemberDB.txt
Library-Espanola/: BookDB.txt  MemberDB.txt
Library-Nueva/: BookDB.txt  MemberDB.txt  TransactionDB.txt
app/: Main.hs
src/: Utils.hs
src/Data/: Book.hs  Library.hs  Member.hs  Transaction.hs
test/: MemberTest.hs
