name:                library-management-system
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Cabezas Erazo Dario Sebastian, Jimenez Vaca Edison Alonso, Conza Fajardo Jefferson Alfredo
maintainer:          dario.cabezas@yachaytech.edu.ec, edison.jimenez@yachaytech.edu.ec, jefferson.conza@yachaytech.edu.ec
build-type:          Simple
cabal-version:       >=1.10

executable library-management-system
  main-is:             Main.hs
  hs-source-dirs:      src, app
  other-modules:       Data.Book, Data.Member, Data.Library, Data.Transaction, Utils
  build-depends:       base, containers, directory, time
  default-language:    Haskell2010